Logo without backgroung and removed form from the end.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <img src="images/logo.jpg" alt="AIChE|BITS PILANI" href="#" width="164em">
+            <img src="images/logo1.png" alt="AIChE|BITS PILANI" href="#" width="164em">
             <h6>AIChE|BITS PILANI</h6>
-            <!--<img id="mobile-cta" class="mobile navbar" src="images/menu.svg" alt="Open Nagigation Menu">>
+            <!--<img id="mobile-cta" class="mobile navbar" src="images/menu.svg" alt="Open Nagigation Menu">-->
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -108,7 +108,9 @@
             </h4>
             <img src="images/coming soon.png" class="img-soon" alt="Coming Soon">
     </section>
-    <section class="accept-email">
+
+    <!--Form to enter email for getting updates-->
+    <!--<section class="accept-email">
         <div class="container-non-glow">
             <h5>Drop your email below to get notified about our upcoming events.</h5>
             <form action="">
@@ -123,6 +125,7 @@
                 <input type="submit" class="send-email" value="Submit">
             </form>
         </div>
-    </section>
+    </section>-->
+
 </body>
 </html>
