Transparent navbar and reduced font size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar">
         <div class="container">
             <img src="images/logo1.png" alt="AIChE|BITS PILANI" href="#" width="164em">
-            <h6>AIChE|BITS PILANI</h6>
+            <!--<h6>AIChE|BITS PILANI</h6>-->
             <!--<img id="mobile-cta" class="mobile navbar" src="images/menu.svg" alt="Open Nagigation Menu">-->
             <nav>
                 <ul>
